--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body, h1, p {
 /* Body styles */
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #3529e1;
     color: #333;
     line-height: 1.6;
 }
